attached_assets/Pasted-PS-C-Users-shany-Documents-MyCursorAI-Cascade-sucscription-boiler-inspection-app-npm-run-build--1751524308301_1751524308303.txt
PS C:\Users\shany\Documents\MyCursorAI\Cascade_sucscription\boiler-inspection-app> npm run build

> boiler-inspection-app@2.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist

vite v5.4.19 building for production...
transforming (1) index.htmlnode:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/shany/Documents/MyCursorAI/Cascade_sucscription/boiler-inspection-app/client): [Error] Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- C:\Users\shany\Documents\MyCursorAI\Cascade_sucscription\boiler-inspection-app\postcss.config.js

(@C:\Users\shany\Documents\MyCursorAI\Cascade_sucscription\boiler-inspection-app\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- C:\Users\shany\Documents\MyCursorAI\Cascade_sucscription\boiler-inspection-app\postcss.config.js

(@C:\Users\shany\Documents\MyCursorAI\Cascade_sucscription\boiler-inspection-app\postcss.config.js)
    at load (file:///C:/Users/shany/Documents/MyCursorAI/Cascade_sucscription/boiler-inspection-app/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33632:11)
    at file:///C:/Users/shany/Documents/MyCursorAI/Cascade_sucscription/boiler-inspection-app/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/shany/Documents/MyCursorAI/Cascade_sucscription/boiler-inspection-app/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33656:8)
    at processResult (file:///C:/Users/shany/Documents/MyCursorAI/Cascade_sucscription/boiler-inspection-app/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33726:14)
    at file:///C:/Users/shany/Documents/MyCursorAI/Cascade_sucscription/boiler-inspection-app/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33856:14]

Node.js v22.16.0